[project]
name = "ai-assistent-bot"
version = "0.1.0"
description = ""
authors = [
    {name = "Сергей Кружилин",email = "s060874@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask (>=3.1.0,<4.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "google-api-python-client (>=2.167.0,<3.0.0)",
    "python-telegram-bot (>=22.0,<23.0)",
    "openai (>=1.74.0,<2.0.0)",
    "telebot (>=0.0.5,<0.0.6)"
]

[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
